# dioxus-dapp

./: .gitignore  .swcrc  Cargo.toml  README.md  TODO.md  index.html  input.css  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
js/: counter.jsx  counter.tsx
src/: airdrop.rs  contexts.rs  lib.rs  main.rs
src/components/: app_bar.rs  content_container.rs  footer.rs  link.rs  mod.rs  network_switcher.rs
src/hooks/: use_local_storage.rs
src/pages/: basics.rs  home.rs  mod.rs
src/views/: basics_view.rs  home.rs  home_view.rs  mod.rs
src/wallets/: README.md  mod.rs  web3.rs
src/wallets/adapters/: brave.rs  mod.rs  phantom.rs
src/wallets/hooks/: mod.rs  use_local_storage.rs  use_wallet.rs
src/wallets/ui/: button.rs  mod.rs  multi_button.rs  wallet_modal.rs  wallet_modal_button.rs  wallet_multi_button.rs
ts/: brave.ts  button.tsx  package.json  tsconfig.json  webpack.config.js
ts/src/: index.ts
