[package]
name = "dioxus-dapp"
version = "0.1.0"
edition = "2021"

[features]
default = ["console_error_panic_hook"]

[dependencies]
dioxus = "0.3.1"
dioxus-web = "0.3"
log = "0.4.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# WebAssembly Debug
wasm-logger = "0.2.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
dioxus-router = { version = "0.3.0", features = ["web"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
